--- a/WebServerAPI/appsettings.json
+++ b/WebServerAPI/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=EmploymentSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:5258"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
