--- a/WebServerAPI/appsettings.json
+++ b/WebServerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=EmploymentSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-NH0OL4FO\\SQLEXPRESS;Database=EmploymentSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
